Mejora logica